Fixed bug #203526: [Table] TableViewer.add() replaces rather than inserts if TableViewer has a sorter